           inside the window. Just having the focus is no longer sufficient.
        - fixed manual placement in combination with electricBorders. Did I already
           mention that I hate all these options....grrr.........
        - ElectricBorderMovePointer is obsolete and no longer supported. Instead there
           is a new option: ElectricBorderPointerWarp=NoWarp,MiddleWarp,FullWarp

patchlevel 4:
        - raised the number of possible virtual desktops to 32. Note that you need
           a current libkdecore to take the full benefit from this.
        - electric borders need to be "pushed" if you want to switch to another virtual 
           desktop without dragging a window. The number of pushes within the
           timeframe given by the ElectricBorder property is defined in the new property
           ElectricBorderNumberOfPushes. The default is 5.
        - small fix to generate less toplevel windows

patchlevel 4:
        - new option: WindowResizeType={Opaque, Transparent}

patchlevel 3:
        - "snap to border" and "snap to window" modified: they are
           working in "real time", now. The default is 10 pixel for
           both. This made my older edge resitance obsolete (removed)
         - doNotManage understands regular expressions
         - self transient windows can be moved to other virtual desktops

patchlevel 2:
	- fixed a bunch of bugs with smart placement, cascade placement,
	  unclutter, snap to border and snap to window (bugs given mostly
	  by the wrong assumption that te client's geometry is defined
	  relative to free desk space). Thanks Stephan (CT)
        - fixed a nasty pointer-grab bug for window movement

patchlevel 1:
	- fixed the avoidance of shaded windows bug in smart placement.
	  Ugly fix. Ugh! (CT)
	- snap to border and snap to window functions (CT). Maximum limit
	  arbitrarily fixed at 50 pixels. Complain if you're unhappy with :-)

patchlevel 0: (Matthias? Bernd?)

In 0.10:
--------
patchlevel 33: